--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -45,13 +45,21 @@
         [(ngModel)]="registerRequest.password"
       >
     </div>
+
+    <div class="form-group">
+      <label for="password">Role <span class="text-danger">(*)</span></label>
+      <select  name="role" required class="form-control" id=""
+              [(ngModel)]="registerRequest.role"
+        >
+
+          <option value="USER">Revendeur</option>
+          <option value="MANAGER">Responsable clientèle</option>
+      </select>
+    </div>
+
     <div class="row">
-
-
-
         <div class="col-10">
           <label for="rememberMe">Voulez-vous utiliser <span class="text-success"> une double authentification ? (2FA)</span> </label>
-
         </div>
         <div class="col-2">
           <input
@@ -60,9 +68,9 @@
             type="checkbox"
             [(ngModel)]="registerRequest.mfaEnabled"
           >
-
-      </div>
+        </div>
     </div>
+
     <button type="submit">S'enregistrer</button>
 
     <p class="mt-4">Vous avez deja un compte ? <a class="text-decoration-none text-primary " routerLink="/login">Se connecter</a></p>
