--- a/src/app/pages/responsable/sidebar-responsable/sidebar-responsable.component.html
+++ b/src/app/pages/responsable/sidebar-responsable/sidebar-responsable.component.html
@@ -32,11 +32,11 @@
         <div class="menu-title">Gestion catalogue</div>
       </a>
       <ul>
-        <li> <a routerLink="product"><i class="bx bx-right-arrow-alt"></i>Product List</a>
+        <li> <a routerLink="product"><i class="bx bx-right-arrow-alt"></i>Liste Produit</a>
         </li>
-        <li> <a routerLink="product-details"><i class="bx bx-right-arrow-alt"></i>Product Details</a>
+        <li> <a routerLink="product-details"><i class="bx bx-right-arrow-alt"></i>Details Produit</a>
         </li>
-        <li> <a routerLink="add-product"><i class="bx bx-right-arrow-alt"></i>Add Product</a>
+        <li> <a routerLink="add-product"><i class="bx bx-right-arrow-alt"></i>Ajouter Produit</a>
         </li>
       </ul>
     </li>
@@ -47,11 +47,11 @@
         <div class="menu-title">Gestion commande</div>
       </a>
       <ul>
-        <li> <a routerLink="/order"><i class="bx bx-right-arrow-alt"></i>Order List</a>
+        <li> <a routerLink="/order"><i class="bx bx-right-arrow-alt"></i>Liste commande</a>
         </li>
-        <li> <a routerLink="/active-order"><i class="bx bx-right-arrow-alt"></i>Active order</a>
+        <li> <a routerLink="/active-order"><i class="bx bx-right-arrow-alt"></i>Commande validé</a>
         </li>
-        <li> <a routerLink="/inactive-order"><i class="bx bx-right-arrow-alt"></i>Inactive order</a>
+        <li> <a routerLink="/inactive-order"><i class="bx bx-right-arrow-alt"></i>Commande  nonValidé</a>
         </li>
       </ul>
     </li>
@@ -73,7 +73,7 @@
       <a routerLink="/profile">
         <div class="parent-icon"><i class="bx bx-user-circle"></i>
         </div>
-        <div class="menu-title">User Profile</div>
+        <div class="menu-title">Mon profile</div>
       </a>
     </li>
 
