--- a/src/app/pages/responsable/product/product.component.html
+++ b/src/app/pages/responsable/product/product.component.html
@@ -59,14 +59,14 @@
                               </td>
 
                               <td>
-                                  <a href="" class="btn btn-info" title="Edit Data"><i class="fa-solid fa-pencil"></i></a>
+                                  <a href="" class="btn btn-info m-1" title="Edit Data"><i class="fa-solid fa-pencil"></i></a>
 
                                   <a id="delete" href="" class="btn btn-danger" title="Delete Data"><i class="fa-solid fa-trash"></i></a>
 
-                                  <a href="" class="btn btn-warning" title="Details Page"><i class="fa-solid fa-eye"></i></a>
+                                  <!-- <a href="" class="btn btn-warning" title="Details Page"><i class="fa-solid fa-eye"></i></a> -->
                                   <!--Afficher icone en fonction du status pour activer ou desactiver le produit-->
 
-                                      <a href="" class="btn btn-primary" title="Inactive"><i class="fa-solid fa-thumbs-down"></i></a>
+                                      <!-- <a href="" class="btn btn-primary" title="Inactive"><i class="fa-solid fa-thumbs-down"></i></a> -->
 
 
                                       <!-- <a href="" class="btn btn-primary" title="Inactive"><i class="fa-solid fa-thumbs-up"></i></a> -->
@@ -100,10 +100,12 @@
 
 </div>
 
-<script src="src/assets/styles1/plugins/datatable/js/jquery.dataTables.min.js"></script>
+
+<!-- <script src="src/assets/styles1/plugins/datatable/js/jquery.dataTables.min.js"></script>
 <script>
   $(document).ready(function() {
     $('#example').DataTable();
     } );
 </script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+ -->
