--- a/src/app/material-component/lists/lists.component.html
+++ b/src/app/material-component/lists/lists.component.html
@@ -1,195 +1,56 @@
 <!-- ============================================================== -->
 <!-- row -->
 <!-- ============================================================== -->
+
+<div class="row">
+  <p class="text-center col-4">
+    <a  href="/add-user-form">
+      <button mat-fab extended color="accent" >
+        <mat-icon>plus_one</mat-icon>
+        Ajouter un utilisateur
+      </button>
+    </a>
+  </p>
+</div>
+
+
+
 <div class="row">
   <!-- Card column -->
   <div class="col-12">
-<!--    Form to add new user-->
-    <mat-card *ngIf="!authResponse.mfaEnabled">
-      <div class="success-message-panel" *ngIf="message">
-        <div class="success-icon">&#10004;</div>
-        <div class="success-message">{{message}}</div>
-      </div>
-      <mat-card-content>
-        <mat-card-title>Ajouter un compte utilisateur</mat-card-title>
-        <mat-card-subtitle> Formulaire d'ajout des comptes utilisateurs par role selon le facteur d'authentification.</mat-card-subtitle>
 
-        <div class="col-8" >
-          <form (ngSubmit)="registerUser()">
-            <p>
-              <mat-form-field appearance="fill">
-                <mat-label>Nom</mat-label>
-                <input matInput placeholder="Write first name"
-                       id="firstname"
-                       name="firstname"
-                       required
-                       [(ngModel)]="registerRequest.firstname"
-                >
-                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-              </mat-form-field>
-            </p>
-            <p>
-              <mat-form-field appearance="fill">
-                <mat-label>Prénom</mat-label>
-                <input matInput placeholder="Write last name"
-                       id="lastname"
-                       name="lastname"
-                       required
-                       [(ngModel)]="registerRequest.lastname"
-                >
-                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-              </mat-form-field>
-            </p>
-            <p>
-              <mat-form-field>
-                <mat-label>Adresse mail</mat-label>
-                <input matInput placeholder="abdel@example.com" [formControl]="email" required
-                       id="email"
-                       name="email"
-                       [(ngModel)]="registerRequest.email"
-                >
-                <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-              </mat-form-field>
-            </p>
-            <p>
-              <mat-form-field>
-                <mat-label>Mot de passe</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" value="1234"
-                       id="password"
-                       name="password"
-                       required
-                       [(ngModel)]="registerRequest.password"
-                >
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                  <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-              </mat-form-field>
-            </p>
-            <p>
-              <mat-form-field [color]="colorControl.value!">
-                <mat-label>Role utilisateur</mat-label>
-                <mat-select  [formControl]="colorControl"
-                             name="role"
-                             [(ngModel)]="registerRequest.role"
-                >
-                  <mat-option value="USER">Revendeur</mat-option>
-                  <mat-option value="MANAGER">Responsable clientèle</mat-option>
-                  <mat-option value="ADMIN">Operateur telephonique</mat-option>
-                </mat-select>
-              </mat-form-field>
-            </p>
-            <p>
-              <mat-checkbox
-                id="rememberMe"
-                name="rememberMe"
-                [(ngModel)]="registerRequest.mfaEnabled"
-              >Activer <span class="text-success"> une double authentification ? (2FA)</span></mat-checkbox>
-            </p>
-            <p class="text-center">
-              <button mat-fab extended>
-                <mat-icon>save</mat-icon>
-                Ajouter
-              </button>
-            </p>
-
-          </form>
-        </div>
-
-      </mat-card-content>
-    </mat-card>
-<!-- Verification QR CODE-->
-    <mat-card *ngIf="authResponse.mfaEnabled">
-
-      <div class="success-message-panel" *ngIf="message">
-        <div class="success-icon">&#10004;</div>
-        <div class="success-message">{{message}}</div>
-      </div>
-
-      <mat-card-content>
-        <mat-card-title>Scanner votre code QR avec authenticator.</mat-card-title>
-        <mat-card-subtitle> Il s'agit d'une double verification a six caracteres.</mat-card-subtitle>
-      <div class="col-12">
-        <div class="qr-code">
-          <img [src]="authResponse.secretImageUri" alt="QR Code">
-        </div>
-
-        <p>
-          <mat-form-field appearance="fill">
-            <mat-label>Entrer votre code secret</mat-label>
-            <input matInput placeholder="Write your secret code  here"
-                   id="validationCode"
-                   name="validationCode"
-                   required
-                   class="form-control"
-                   [(ngModel)]="otpCode"
-            >
-            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
-          </mat-form-field>
-        </p>
-      </div>
-
-
-      </mat-card-content>
-
-
-
-<!--      <div class="form-group">-->
-<!--        <label for="validationCode"></label>-->
-<!--        <input-->
-<!--          type="text"-->
-<!--          id="validationCode"-->
-<!--          name="validationCode"-->
-<!--          required-->
-<!--          class="form-control"-->
-<!--          [(ngModel)]="otpCode"-->
-<!--        >-->
-<!--      </div>-->
-
-
-      <p class="text-center">
-        <button mat-fab extended
-                (click)="verifyTfa()"
-                [class.button-disabled]="otpCode.length < 6"
-          >
-          <mat-icon>save</mat-icon>
-          Verifier le code
-        </button>
-      </p>
-<!--      <button class="btn btn-success"-->
-<!--        type="button"-->
-<!--        (click)="verifyTfa()"-->
-<!--        [class.button-disabled]="otpCode.length < 6"-->
-<!--      >Verifier le code</button>-->
-
-    </mat-card>
-<!--End Verification-->
 <!--    List of users-->
 
     <mat-card>
       <mat-card-content>
         <mat-card-title>Liste des utilisateurs</mat-card-title>
-        <mat-card-subtitle> Tableau recapitulatif des informations utilisateurs et des privilèges associés.</mat-card-subtitle>
+        <mat-card-subtitle> Tableau récapitulatif des informations utilisateurs et des privilèges associés.</mat-card-subtitle>
       </mat-card-content>
 
 
-        <table   class="mat-elevation-z8" >
+        <table class="mat-elevation-z8 table  table-striped" >
               <!-- Position Column -->
               <thead>
                   <tr>
-                    <th>No.</th>
+                    <th>#.</th>
                     <th>Noms.</th>
                     <th>Email.</th>
                     <th>Role.</th>
-                    <th>2FA.</th>
+                    <th>Etat.</th>
+                    <th>Double authentification ?.</th>
+                    <th>Actions</th>
                   </tr>
               </thead>
               <tbody>
                 <tr  *ngFor="let user of users">
-                  <td>i</td>
+                  <td> <i class="fa fa-user"></i></td>
                   <td>{{user.firstname}} {{user.lastname}}</td>
                   <td>{{user.email}}</td>
                   <td>{{user.role}}</td>
-                  <td>{{user.mfaEnabled}}</td>
+                  <td class="text-success"><b>Actif</b></td>
+                  <td class="text-info text-center"><b>{{user.mfaEnabled}}</b></td>
+                  <td>
+                    <button class="btn btn-danger">Desactiver</button></td>
                 </tr>
               </tbody>
               <!-- Name Column -->
