--- a/src/app/pages/responsable/product-details/product-details.component.html
+++ b/src/app/pages/responsable/product-details/product-details.component.html
@@ -43,10 +43,10 @@
                     <input type="text" name="product_size" class="form-control visually-hidden" data-role="tagsinput" value="Small,Medium,Large">
                   </div> -->
 
-                  <div class="mb-3">
+                  <!-- <div class="mb-3">
                     <label for="inputProductTitle" class="form-label">Couleur produit</label>
                     <input type="text" name="product_color" class="form-control visually-hidden" data-role="tagsinput" value="Red,Blue,Black">
-                  </div>
+                  </div> -->
 
 
                   <div class="form-group mb-3">
@@ -156,7 +156,7 @@
 
                     <div class="col-12">
                         <div class="d-grid">
-                          <input type="submit" class="btn btn-primary px-4" value="Enregistrez produit" />
+                          <input type="submit" class="btn btn-primary px-4" value="Update produit" />
                         </div>
                     </div>
                 </div>
